--- a/index.html
+++ b/index.html
@@ -164,50 +164,50 @@ footer h3 {
                 <h2>IMAGES</h2>
             </div>
 
-            <img src="img13.jpeg" alt="">
+            <img src="https://user-images.githubusercontent.com/75295214/101592258-f5f20280-3a13-11eb-9d8d-1c676adc2fd4.jpeg" alt="">
             <div class="caption">
                 <h3>Photo One</h3>
             </div>
-            <img src="img2.jpeg" alt="">
+            <img src="https://user-images.githubusercontent.com/75295214/101592035-98f64c80-3a13-11eb-9670-d686466ddb06.jpeg" alt="">
             <div class="caption">
                 <h3>Photo Two</h3>
             </div>
-            <img src="img3.jpg" alt="">
+            <img src="https://user-images.githubusercontent.com/75295214/101592380-2afe5500-3a14-11eb-82e2-ff0b0e78869a.JPG" alt="">
             <div class="caption">
                 <h3>Photo Three</h3>
             </div>
-            <img src="img4.jpg" alt="">
+            <img src="https://user-images.githubusercontent.com/75295214/101592075-a6abd200-3a13-11eb-9700-c1b07541f1ec.JPG" alt="">
             <div class="caption">
                 <h3>Photo Four</h3>
             </div>
-            <img src="img5.jpg" alt="">
+            <img src="https://user-images.githubusercontent.com/75295214/101592138-bfb48300-3a13-11eb-8c64-e02f7ec24dff.jpg" alt="">
             <div class="caption">
                 <h3>Photo Five</h3>
-				<img src="img12.jpg" alt="">
+				<img src="https://user-images.githubusercontent.com/75295214/101592239-ee325e00-3a13-11eb-8857-29c8a5b2ab39.jpg" alt="">
             <div class="caption">
                 <h3>Photo Six</h3>
             </div>
-			<img src="img8.jpg" alt="">
+			<img src="https://user-images.githubusercontent.com/75295214/101592175-ce029f00-3a13-11eb-83b5-4380b8d50efb.JPG" alt="">
             <div class="caption">
                 <h3>Photo Seven</h3>
             </div>
-			<img src="img7.jpg" alt="">
+			<img src="https://user-images.githubusercontent.com/75295214/101592164-c93deb00-3a13-11eb-9b23-1315ac936ff0.jpg" alt="">
             <div class="caption">
                 <h3>Photo Eight</h3>
             </div>
-			<img src="img11.jpg" alt="">
+			<img src="https://user-images.githubusercontent.com/75295214/101592234-ebd00400-3a13-11eb-8aeb-97e6deff6dd4.jpg" alt="">
             <div class="caption">
                 <h3>Photo Nine</h3>
             </div>
-			<img src="img13.jpeg" alt="">
+			<img src="https://user-images.githubusercontent.com/75295214/101592258-f5f20280-3a13-11eb-9d8d-1c676adc2fd4.jpeg" alt="">
             <div class="caption">
                 <h3>Photo Ten</h3>
             </div>
-			<img src="img9.jpg" alt="">
+			<img src="https://user-images.githubusercontent.com/75295214/101592181-d064f900-3a13-11eb-9b79-5910c6f7d581.JPG" alt="">
             <div class="caption">
                 <h3>Photo Eleven</h3>
             </div>
-			<img src="img6.jpg" alt="">
+			<img src="https://user-images.githubusercontent.com/75295214/101592153-c4793700-3a13-11eb-9754-6d61f54f0940.JPG" alt="">
             <div class="caption">
                 <h3>Photo Twelve</h3>
             </div>
