--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ footer h3 {
                     </a>
                 </div>
             </div>
-            <div id="landing-image"></div>
+            <div id="https://user-images.githubusercontent.com/75295214/101592258-f5f20280-3a13-11eb-9d8d-1c676adc2fd4.jpeg"></div>
         </div>
 
         <div id="images">
